# DayCrafter

./: .gitignore  README.md  pubspec.yaml
MCP_tools/: .env.example  .gitignore  README.md  api.py  input_task.txt  mcp_server.py  pyproject.toml  requirements.txt  setup_auth.py  test_api.py
MCP_tools/knowledge/: user_preference.txt
MCP_tools/src/calender/: crew.py  main.py
MCP_tools/src/calender/config/: agents.yaml  tasks.yaml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  models.dart  objectbox-model.json  objectbox.g.dart  provider.dart  styles.dart
lib/config/: tools_config.dart
lib/database/: objectbox_entities.dart  objectbox_service.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/services/: audio_service.dart  embedding_service.dart  global_agent_tools.dart  local_auth_service.dart  short_term_memory.dart  task_scheduler.dart
lib/widgets/: add_task_dialog.dart  calendar_view.dart  chat_view.dart  dot_grid_background.dart  empty_state.dart  global_agent_view.dart  header.dart  name_entry.dart  notification_overlay.dart  project_modal.dart  search_overlay.dart  settings_dialog.dart  settings_view.dart  sidebar.dart  task_detail_dialog.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
test/: logic_verification.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+15 files in other folders)
