[project]
name = "calender"
version = "0.1.0"
description = "calender using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv"
]

[project.scripts]
calender = "calender.main:run"
run_crew = "calender.main:run"
train = "calender.main:train"
replay = "calender.main:replay"
test = "calender.main:test"
run_with_trigger = "calender.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
